Started fixing the torrent of misses